data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_868.wast
;; 9. **Branch Using Incorrectly Scoped Operand:**    - Implement `br` instructions referencing labels and blocks with insufficient operands on the stack.    - **Constraint Checked:** Operand stack scheduling and management relative to operand requirements of blocks.    - **CFG Impact:** Missing operand values create CFG inconsistencies, marking legitimate execution paths as unreachable.

(assert_invalid
  (module
    (func $branch-incorrect-scoped-operand
      (block (result i32) (br 0) (i32.const 0))
    )
  )
  "type mismatch"
)